--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -1,34 +1,83 @@
 .container{
-  position: relative;
-  width: 100%;
-  height: 20px;
-  padding: 0px 30px;
+  position: fixed;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  width: 100vw;
+  height: 50px;
+  padding: 0px 0px;
+  top: 0px;
+  
+  align-content: center;
+  justify-content: space-between; /*시작점과 끝점 배치한 후 같은 간격*/
   background-color: rgb(237,239,233);
   z-index: 10;
 }
 
 .page_name{
+  width: 30%;
+  height: 100%;
   position: relative;
   top: 20%;
-  font-size: 20px;
+  left: 4%;
+  font-size:large;
   text-shadow: 5px 5px #c7cdd4;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.page_name:visited{
+  color: green;
+}
+
+.page_name:active,
+.page_name:hover{
+  color: black;
 }
 
 .group_name{
-  display: block;
-  position : relative;
-  align-content: center;
-  text-shadow: 5px 5px #c7cdd4;
-}
-
-.group_link{
-  display: relative;
-  margin-right: 50px;
-  float: left;
+  width: 70%;
+  height: 100%;
+  display: flex;
   flex-direction: row;
   align-content: center;
-  text-shadow: 5px 5px #c7cdd4;
+  justify-content: space-between; /*시작점과 끝점 배치한 후 같은 간격*/
+  font-size: 16px;
 }
+
+
+/* 미디어 쿼리를 사용하여 브라우저 창 크기에 따라 폰트 크기를 조정 */
+
+
+@media screen and (max-width: 768px) {
+  .group_name {
+      font-size: 14px; /* 브라우저 창 너비가 768px 이하일 때 폰트 크기 조정 */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .group_name {
+      font-size: 5px; /* 브라우저 창 너비가 480px 이하일 때 폰트 크기 조정 */
+  }
+}
+
+
+
+.group_link{
+  display:inline;
+  position: relative;
+  top: 20%;
+  margin-right: 10%;
+  text-shadow: 5px 5px #c7cdd4;
+  text-decoration: none;
+}
+
+.group_link:visited{
+  color:black
+}
+
+.group_link:hover,
+.group_link:active{
+  color:red;
+}
+
